<resources>
    <string name="app_name">Mini Workshop Kotlin</string>
    <string name="label_splash">Version 1.0</string>
    <string name="text_form_login">Form Login</string>
    <string name="text_login">Login Now</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_logout">Logout App</string>
    <string name="teks_menu1">Camera</string>
    <string name="teks_menu2">Volley</string>
    <string name="teks_menu3">Esafirm Lib</string>
    <string name="teks_menu4">Database</string>
</resources>
